js/js.translator/testData/incremental/invalidation/defaultParamMethod/main/usage.kt
internal fun usage(a: B) = a.f()